--- a/index.html
+++ b/index.html
@@ -55,12 +55,7 @@
                 <ul class="intro__list">
                     <li>Living at the intersection of Technology and Politics</li>
                 </ul> <a id="portfolio-button" style="background-color: #4f5f66;" class="button" href="#portfolio" title="View portfolio items">View Portfolio <i class="fa fa-angle-down"></i></a> </header>
-
-
-
         </div>
-
-
         <section class="featured work">
             <h2 id="portfolio">Portfolio</h2>
             <ul class="three-up no-gutter">
@@ -123,48 +118,63 @@
                             <p>View my <a href="https://www.linkedin.com/in/dane-sherrets-7a049973/" target="_blank">LinkedIn profile</a></p>
                         </li>
             </ul>
-         <!--    <button id="myBtn">Open Modal</button>
+            <!--    <button id="myBtn">Open Modal</button>
  -->
-<!-- The Modal -->
-<div id="myModal" class="modal">
+            <!-- The Modal -->
+            <div id="myModal" class="modal">
+                <!-- Modal content -->
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                   
+                        <img class="pic" src="https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/19954871_334924766938799_5402780116306624512_n.jpg">
+                  <div class="bio">
+                    <br>
+                    <p style="color:black">After having worked for a Republican Congressman and on a Democratic campaign, Dane realized that both parties are ill-equipped to deal with our nation's problems. Dane worked with a number of organizations in the political reform space before joining The Centrist Project in 2015. Dane is now learning to become a web developer to help independents gain the digital tools they need.</p>
+                    </div>
+                </div>
+            </div>
 
-  <!-- Modal content -->
-  <div class="modal-content">
-    <span class="close">&times;</span>
-    <img align="middle"  style="height: 400px; width: 300px;" src="https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/19954871_334924766938799_5402780116306624512_n.jpg">
-<p style="color:black">After having worked for a Republican Congressman and on a Democratic campaign, Dane realized that both parties are ill-equipped to deal with our nation's problems. Dane worked with a number of organizations in the political reform space before joining The Centrist Project in 2015. Dane is now learning to become a web developer to help independents gain the digital tools they need.</p>
- 
+                
+            <img class="pic" src="https://res.cloudinary.com/uniteamerica/image/fetch/w_579,h_383,c_fill,g_face,f_auto/https://d3n8a8pro7vhmx.cloudfront.net/centristmovement/pages/3711/meta_images/original/image1.jpeg?1519228465" alt="Terry Hayes">
+            <div class="bio">
+                <h2>Gov. Bill Walker - Governor</h2>
+                <h4>Incumbent</h4>
+                <p>Bill Walker was elected on a unity ticket with his former Democratic opponent in 2014 and serves as the only independent governor in the country
+                    <p>
+                        <a class="profile" href="https://www.uniteamerica.org/gov_bill_walker">
+                            <button class="button">Learn More</button>
+                        </a>
+            </div>
 
-  </div>
 
-</div>
-<script type="text/javascript">
-    // Get the modal
-var modal = document.getElementById('myModal');
 
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
+            <script type="text/javascript">
+            // Get the modal
+            var modal = document.getElementById('myModal');
 
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
+            // Get the button that opens the modal
+            var btn = document.getElementById("myBtn");
 
-// When the user clicks on the button, open the modal 
-btn.onclick = function() {
-    modal.style.display = "block";
-}
+            // Get the <span> element that closes the modal
+            var span = document.getElementsByClassName("close")[0];
 
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
+            // When the user clicks on the button, open the modal 
+            btn.onclick = function() {
+                modal.style.display = "block";
+            }
 
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-</script>
+            // When the user clicks on <span> (x), close the modal
+            span.onclick = function() {
+                modal.style.display = "none";
+            }
+
+            // When the user clicks anywhere outside of the modal, close it
+            window.onclick = function(event) {
+                if (event.target == modal) {
+                    modal.style.display = "none";
+                }
+            }
+            </script>
             <nav class="third">
                 <dl>
                     <dt><a href="#">About</a></dt>
@@ -179,7 +189,6 @@ window.onclick = function(event) {
                     <dd>Enquire about hiring Dane</dd>
                 </dl>
             </nav>
-
 </body>
 
 </html>
