--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="modal-content">
                     <span class="close">&times;</span>
                    
-                        <img class="pic" src="https://scontent.cdninstagram.com/t51.2885-15/s320x320/e35/19954871_334924766938799_5402780116306624512_n.jpg">
+                        <img class="pic" src="./images/bio_pic.jpeg">
                   <div class="bio">
                     <br>
                     <p style="color:black">After having worked for a Republican Congressman and on a Democratic campaign, Dane realized that both parties are ill-equipped to deal with our nation's problems. Dane worked with a number of organizations in the political reform space before joining The Centrist Project in 2015. Dane is now learning to become a web developer to help independents gain the digital tools they need.</p>
