--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
                 </div>
             </div>
             <script type="text/javascript">
+
+             alert("UNDER CONSTRUCTION. Still building the 'About' section and 'Testimonials'. Will be completed in November of 2018 ");   
             // Get the modal
             var modal = document.getElementById('myModal');
             // Get the button that opens the modal
