testing a small change to title

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main id="main" role="main">
         <div class="intro front valign">
             <header class="group vcenter">
-                <h1>Full-Stack Developer and Political Consultant</h1>
+                <h1>Full-Stack Developer</h1>
                 <ul class="intro__list">
                     <li>Living at the intersection of Technology and Politics</li>
                 </ul> <a id="portfolio-button" style="background-color: #4f5f66;" class="button" href="#portfolio" title="View portfolio items">View Portfolio <i class="fa fa-angle-down"></i></a> </header>
